# icenet

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  analyse.py  download_and_regrid_era5_data_in_parallel.sh  download_and_regrid_era5_data_in_parallel_nh.sh  download_seas5_forecasts_in_parallel.sh  environment.dev.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  slurm_train_script.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  api.rst  classes_icenet.puml  conf.py  icenet-notebooks  icenet.data.datasets.rst  icenet.data.loaders.rst  icenet.data.masks.rst  icenet.data.references.rst  icenet.data.rst  icenet.model.handlers.rst  icenet.model.networks.rst  icenet.model.rst  icenet.plotting.rst  icenet.rst  icenet.tests.rst  icenet2.data.interfaces.rst  icenet2.data.processors.rst  icenet2.data.rst  icenet2.data.sic.rst  icenet2.model.rst  icenet2.plotting.rst  icenet2.process.rst  icenet2.results.rst  icenet2.rst  index.rst  installation.rst  make.bat  modules.rst  packages_icenet.puml  readme.rst  requirements.txt  tutorial.rst  uml.rst  usage.rst
docs/_templates/: page.html  sbt-sidebar-nav.html
icenet/: __init__.py  cli.py  exceptions.py  utils.py
icenet/data/: cli.py  dataset.py  loader.py  meta.py  network_dataset.py  process.py  producers.py  utils.py
icenet/data/datasets/: splitting.py  utils.py
icenet/data/interfaces/: cds.py  cmems.py  downloader.py  esgf.py  mars.py  utils.py
icenet/data/loaders/: __init__.py  base.py  dask.py  stdlib.py  utils.py
icenet/data/masks/: nsidc.py  osisaf.py
icenet/data/processors/: amsr.py  cds.py  cmip.py  era5.py  hres.py  meta.py  oras5.py  osi.py  osisaf.py  utils.py
icenet/data/references/: osisaf.py
icenet/data/sic/: amsr.py  mask.py  osisaf.py  utils.py
icenet/model/: callbacks.py  cli.py  losses.py  metrics.py  models.py  predict.py  train.py  utils.py
icenet/model/handlers/: wandb.py
icenet/model/networks/: base.py  tensorflow.py
icenet/plotting/: __init__.py  data.py  forecast.py  trend.py  utils.py  video.py
icenet/process/: azure.py  forecasts.py  local.py  predict.py  utils.py
icenet/results/: threshold.py
icenet/tests/: __init__.py  test_entry_points.py  test_mod.py
icenet2/: __init__.py  analyse_forecasts.py  analyse_seas5_forecasts.py  analyse_validation.py  callbacks.py  compute_seas5_biascorrection.py  config.py  constants.py  download_and_interpolate_daily_sic_data.py  download_and_regrid_daily_era5_data.py  download_daily_siconca_data.py  download_seas5_forecasts.py  gen_data_loader_config.py  gen_figures.py  gen_masks.py  icenet2_plotting_script.py  icenet2_utils.py  losses.py  metrics.py  misc.py  models.py  plot_validation.py  predict_validation.py  preproc_icenet2_data.py  tfp_test.py  train_icenet2.py  utils.py
icenet2/data/: cli.py  dataset.py  loader.py  process.py  producers.py  utils.py
icenet2/data/climate/: cmip6.py  downloader.py  era5.py
icenet2/data/datasets/: utils.py
icenet2/data/interfaces/: cds.py  cmems.py  downloader.py  esgf.py  mars.py  utils.py
icenet2/data/loaders/: __init__.py  base.py  dask.py  stdlib.py
icenet2/data/processors/: cmip.py  datasets.py  era5.py  hres.py  meta.py  oras5.py  osi.py  utils.py
icenet2/data/sic/: mask.py  osisaf.py  utils.py
icenet2/model/: callbacks.py  losses.py  metrics.py  models.py  predict.py  train.py  utils.py
icenet2/plotting/: data.py  forecast.py  plot_set.py  trend.py  utils.py  video.py
icenet2/process/: azure.py  forecasts.py  local.py  predict.py  utils.py
icenet2/tests/: test_mod.py
pipeline/: .gitignore  convert_dataset.py  process_dataset.py  requirements.txt  sbatch.sh  train_model.py
pipeline/datasets/cmip6_transfer/: __init__.py  checksums.tsv  cmip6_transfer.py  cmip6_transfer_test.py
pipeline/datasets/icenet2/: __init__.py  checksums.tsv  icenet2.py  icenet2_test.py
pipeline/icenet/: architectures.py  config.py  data.keras.py  data.py  utils.py
tests/: __init__.py  test_icenet2.py
