[flake8]
exclude = docs

[yapf]
based_on_style = pep8

[tool:pytest]
collect_ignore = ['setup.py']
addopts = --doctest-modules

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
extend-ignore =
    W291,
    W293,
    E501,
    W391,
    E712,
    E266,
    E251,
