[bdist_wheel]
universal = 1

[isort]
profile=black
line_length = 120
atomic = True
# lines_after_imports = 1

[flake8]
exclude = docs

[yapf]
based_on_style = pep8

[tool:pytest]
collect_ignore = ['setup.py']
addopts = --doctest-modules

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
